--- a/style.css
+++ b/style.css
@@ -37,20 +37,52 @@ body {
     filter: blur(5px) brightness(20%) grayscale(100%);
     transition: .5s;
     border-radius: 15px;
-}
-
-.gallery::-webkit-scrollbar {
-    display: none;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0);
 }
 
 .gallery div img:hover {
     filter: blur(0) brightness(100%) grayscale(0);
     cursor: pointer;
     transform: scale(1.04);
+    box-shadow: 0 0 300px rgba(255, 255, 255, 0.5);
+}
+
+.button1 {
+    transform: scale(1);
+    transition: .3s;
+    box-shadow: 0 0 0px rgba(0, 0, 0, 0.3);
+}
+
+.button1:hover {
+    transform: scale(0.95);
+    transform: translateY(15px)
+        rotate(-5deg);
+    box-shadow: 0 0 40px rgba(255, 0, 0, 0.5);
+}
+
+.button2 {
+    transform: scale(1);
+    transition: .3s;
+    box-shadow: 0 0 0px rgba(0, 0, 0, 0.3);
+}
+
+.button2:hover {
+    transform: scale(0.95);
+    transform: translateY(15px)
+        rotate(5deg);
+    box-shadow: 0 0 50px rgba(10, 0, 255, 0.5);
 }
 
 #backBtn #nextBtn {
     width: 50px;
     cursor: pointer;
     margin: 40px;
+}
+
+.gallery::-webkit-scrollbar {
+    display: none;
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
